Skip cursor client operation in mash.

BUG=833456
TEST=none

Change-Id: I9d01f94670a406ea7b30b4c232775dc76ad4a48c
Reviewed-on: https://chromium-review.googlesource.com/1013272
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551282}
Former-commit-id: bf470281c992fae0012930e6e38121d6884a65cd